# Crow_CPP_Template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cyclonedx.yml
configure/: rz_config.hpp.in
data/templates/: email_template_de.html  email_template_en.html
data/templates/de/: mail.txt
data/templates/en/: mail.txt
docs/: cyclone.json  cyclonedx.json  sbom.spdx  scan-report.csv  scan-report.html  scan-report.json  spdx-main.txt
include/: rz_config.hpp
include/controllers/: home_controller.hpp  system_controller.hpp
include/middleware/: auth_middleware.hpp
include/services/: database_service.hpp  notification_service.hpp  smtp_service.hpp
include/utils/: app_config.hpp  password_utils.hpp  token_utils.hpp  totp_utils.hpp
src/: main.cpp
src/controllers/: home_controller.cpp  system_controller.cpp
src/services/: database_service.cpp  notification_service.cpp  smtp_service.cpp
src/utils/: app_config.cpp  password_utils.cpp  token_utils.cpp  totp_utils.cpp
